jupyter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  # namespace는 생략 (Kustomize가 infra로 일괄 적용)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
      - name: jupyter
        image: jupyter/base-notebook:latest
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-svc
  annotations:
    # MetalLB에게 랜덤 IP 대신 특정 IP 하나만 할당하도록 강제합니다.
    # 이렇게 하면 EXTERNAL-IP에 주소가 두 개 뜨는 것을 방지할 수 있습니다.
    # change!!
    #metallb.universe.tf/loadBalancerIPs: 10.20.0.202
    metallb.universe.tf/loadBalancerIPs: 172.16.20.203
spec:
  type: LoadBalancer
  selector:
    app: jupyter
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8888
  # [주의] externalIPs 필드는 절대 사용하지 마세요. (IP 중복의 원인)
