mail.yaml
# 2. 실행 설계도: 메일 서버 배포 (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
      - name: mail-container
        image: ubuntu:22.04
        # 스크립트 복사 및 실행 (권한 문제 방지)
        command: ["/bin/bash", "-c", "cp /scripts/setup.sh /setup.sh && chmod +x /setup.sh && /setup.sh"]
        ports:
        - containerPort: 25
        - containerPort: 110
        volumeMounts:
        - name: scripts
          mountPath: /scripts
      volumes:
      - name: scripts
        configMap:
          name: mail-server-config
          defaultMode: 0755

---
# 3. 외부 노출: 서비스 (Service) - IP 10.20.0.201 고정 -> change!!
apiVersion: v1
kind: Service
metadata:
  name: mail-service
  annotations:
    # MetalLB를 통한 고정 IP 할당
    #metallb.universe.tf/loadBalancerIPs: 10.20.0.201
    metallb.universe.tf/loadBalancerIPs: 172.16.20.202
spec:
  type: LoadBalancer
  selector:
    app: mail
  ports:
    - name: smtp
      port: 25
      targetPort: 25
    - name: pop3
      port: 110
      targetPort: 110
