web.yaml
# [2] Nginx 배포 (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: infra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: html-storage
          mountPath: /usr/share/nginx/html
        - name: config-storage
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html-storage
        configMap:
          name: web-content
          items:
          - key: index.html
            path: index.html
          - key: about.html
            path: about.html
      - name: config-storage
        configMap:
          name: web-content
          items:
          - key: default.conf
            path: default.conf

---
# [3] 웹 서비스 고정 IP (10.20.0.100) 설정 -> change!!
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  annotations:
    #metallb.universe.tf/loadBalancerIPs: 10.20.0.200
    metallb.universe.tf/loadBalancerIPs: 172.16.20.201
  namespace: infra
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
