ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edgea-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # /about 요청 시 실제로는 about.html 파일을 보여주도록 Nginx 설정과 맞춤
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: www.edgea.lab
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
